--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -6,10 +6,22 @@
     <title>Hello World</title>
 </head>
 <body>
+
+<h1>Criar Usuario</h1>
+<form action="/novoUsuario" method="POST">
+    <label for="nome">Nome Usuário</label>
+    <input type="text" id="nome" name="nome_usuario" required>
+    <button type="submit">Cadastrar Usuário</button>
+</form>
 <h1>Usuarios</h1>
 <ul>
     {% for usuarios in usuarios %}
-        <li>{{usuarios}} </li>
+        <li>{{usuarios}} 
+            <form action="{{url_for('hello.removerUsuario', usuario_id = usuario.id)}}",
+            method="`POST">
+            <button action="submit">Remover</button>
+            </form>
+        </li>
     {% endfor %}
 </ul> 
 </body>
