--- a/web/app/templates/index.html
+++ b/web/app/templates/index.html
@@ -13,13 +13,20 @@
     <input type="text" id="nome" name="nome_usuario" required>
     <button type="submit">Cadastrar Usuário</button>
 </form>
+
 <h1>Usuarios</h1>
 <ul>
-    {% for usuarios in usuarios %}
-        <li>{{usuarios}} 
+    {% for usuario in usuarios %}
+        <li>  
+            <form action = "{{url_for('hello.editarUsuario', usuario_id = usuario.id)}}" 
+            method="POST">
+                <input type="text" name="nome_usuario" value="{{usuario.username}}" required>
+                <button type="submit"> Atualizar</button>
+            </form>
+
             <form action="{{url_for('hello.removerUsuario', usuario_id = usuario.id)}}",
             method="`POST">
-            <button action="submit">Remover</button>
+                <button action="submit">Remover</button>
             </form>
         </li>
     {% endfor %}
