--- a/User/web/app/templates/index.html
+++ b/User/web/app/templates/index.html
@@ -1,16 +1,18 @@
+<!-- David Gabriel Moreira Xavier -->
 <!DOCTYPE html> 
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/estilo.css')}}">
+
 </head>
 <body>
-
 <h1>Criar Usuário</h1>
-<form action="/novoUsuario" method="POST">
+<form class="create-form" action="/novoUsuario" method="POST">
     <label for="nome">Nome Usuário</label>
-    <input type="text" id="nome" name="nome_usuario" required>
+    <input type="text" id="nome" name="nome_usuario" placeholder="Nome" required>
     <button type="submit">Cadastrar Usuário</button>
 </form>
 
@@ -30,30 +32,5 @@
             </form>
         </li>
     {% endfor %}
-</ul> 
-
-<h1>Criar Tarefa</h1>
-<form action="/novaTarefa" method="POST">
-    <label for="decricao">Descrição da Tarefa</label>
-    <input type="text" id="descricao" name="desc_tarefa" required>
-    <button type="submit">Cadastrar Tarefa</button>
-</form>
-
-<h1>Tarefas</h1>
-<ul>
-    {% for tarefa in tarefas %}
-        <li>  
-            <form action = "{{url_for('hello.editarTarefa', tarefa_id = tarefa.id)}}" method="POST">
-                <input type="text" name="desc_tarefa" value="{{tarefa.descricao}}" required>
-                <button type="submit"> Atualizar</button>
-            </form>
-
-            <form action="{{url_for('hello.removerTarefa', tarefa_id = tarefa.id)}}",
-            method="POST">
-                <button action="submit">Remover</button>
-            </form>
-        </li>
-    {% endfor %}
-</ul>
 </body>
 </html>
